--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -42,12 +42,8 @@ article.welcome{
   -ms-transition: background-color 1s ease;
   transition: background-color 1s ease;
 }
-article.welcome .catbg{
 
-}
-article.welcome,
-article.default,
-article.desktop-group-styles{
+article{
   position:absolute;
   width: 100%;
   height: 100%;
@@ -80,6 +76,7 @@ article.desktop-group-styles{
         top: 25%;
       }
       h1, h2{
+        display:block;
         color: $homeFontColor;
         font-weight: normal;
         margin: 0;
@@ -137,64 +134,31 @@ article.desktop-group-styles{
     }
   }
 
-}
-article{
-  //.catbg{
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-  //}
-}
-article.default{
-  //.catbg{
+  // article background styles
+  &.default{
     background-image: url('../images/home/bg-brand-story.png');
     background-size: auto;
     background-position: center bottom;
     background-repeat: no-repeat;
-  //}
-}
-article.desktop-group-styles.category-1{
-    //.catbg{
-      //background-image: url('../images/bg-cat1.jpeg');
-    //}
-    h2.category-1{
-      display:block;
-    }
-}
-article.desktop-group-styles.category-2{
-    //.catbg{
-      background-image: url('../images/home/bg-location-intelligence.png');
-    //}
-    h2.category-2{
-      display:block;
-    }
-}
-article.desktop-group-styles.category-3{
-    //.catbg{
-      //background-image: url('../images/bg-cat3.jpg');
-    //}
-    h2.category-3{
-      display:block;
-    }
-}
-article.desktop-group-styles.category-4{
-    //.catbg{
-      background-image: url('../images/home/bg-shipping-mailing.png');
-    //}
-    h2.category-4{
-      display:block;
-    }
-}
-article.desktop-group-styles.category-5{
-    //.catbg{
-      background-image: url('../images/home/bg-global-ecommerce.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-    //}
-    h2.category-5{
-      display:block;
-    }
+  }
+  &.category-1{
+    //background-image: url('../images/bg-cat1.jpeg');
+  }
+  &.category-2{
+    background-image: url('../images/home/bg-location-intelligence.png');
+  }
+  &.category-3{
+    //background-image: url('../images/bg-cat3.jpg');
+  }
+  &.category-4{
+    background-image: url('../images/home/bg-shipping-mailing.png');
+  }
+  &.category-5{
+    background-image: url('../images/home/bg-global-ecommerce.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
@@ -211,14 +175,14 @@ article.desktop-group-styles.category-5{
         background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
       }
       #home-area{
-        position:relative;
+        position:static;
         height: auto;
         width: 100%;
         background: none;
       }
       article{
         background: none;
-        position:relative;
+        position:static;
         height: auto;
         width: 100%;
         padding: 50px 0;
@@ -247,14 +211,14 @@ article.desktop-group-styles.category-5{
         .catbg{
           display:none;
         }
-        position:relative;
+        position:static;
         width: auto;
         height: auto;
         padding: 50px 0;
         display:block;
         .container-fluid{
-          .page-title{
-            position:relative;
+          .row{
+            position:static;
           }
         }
       }
@@ -297,14 +261,14 @@ article.desktop-group-styles.category-5{
       background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
     }
     #home-area{
-      position:relative;
+      position:static;
       height: auto;
       width: 100%;
       background: none;
     }
     article{
       background: none;
-      position:relative;
+      position:static;
       height: auto;
       width: 100%;
       padding: 50px 0;
@@ -328,19 +292,31 @@ article.desktop-group-styles.category-5{
         color: $homeFontColor;
         font-size:1.6em;
       }
-    }
-    article.welcome{
-      .catbg{
-        display:none;
+      // article background styles
+      &.default,
+      &.category-1,
+      &.category-2,
+      &.category-3,
+      &.category-4,
+      &.category-5{
+        background-image:none;
       }
-      position:relative;
+
+    }
+    article.default,
+    article.welcome{
+      position:static;
       width: auto;
       height: auto;
       padding: 50px 0;
       display:block;
+      background:none;
       .container-fluid{
-        .page-title{
+        .row{
           position:relative;
+          .headline{
+            position:static;
+          }
         }
       }
     }
